--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         </title>
     </head>
     <body>
-        <h1>Gormenghast</h1>
+        <h1>Gormenghast Markov Poetry</h1>
         <h4 id='date'></h4>
 
         <div class="image-section">
