Fixed a bunch of shit

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
     <head>
         <link rel="stylesheet" href="styles/styles.css" />
         <script async src="./javascript/markov_backup.js"></script>
@@ -8,13 +9,12 @@
         </title>
     </head>
     <body>
+
         <h1>Gormenghast Markov Poetry</h1>
         <h4 id='date'></h4>
+        <br>
+        <h2 id='poem'></h2>
+        <img src="castle.jpg" id="bg" alt="">
 
-        <div class="image-section">
-            <div class="section-style">
-              <img src="https://source.unsplash.com/random/400x200" alt="" />
-              <p>A random image courtesy of unsplash.com.</p>
-            </div>
     </body>
 </html>
