--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h4 id='date'></h4>
         <br>
         <h2 id='poem'></h2>
-        <img src="castle.jpg" id="bg" alt="">
+        <!-- <img src="castle.jpg" id="bg" alt=""> -->
 
     </body>
 </html>
