--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <link rel="stylesheet" href="styles/styles.css" />
         <script async src="./javascript/markov_backup.js"></script>
         <title>
-            Gormarkov Poems
+            Joe's Awesome Spooky Castle Poems
         </title>
     </head>
     <body>
