Fixed margins/line breaks
Had to hardcode number of poem lines since I couldn't figure out how to break them appropriately when it was a single string.

--- a/index.html
+++ b/index.html
@@ -9,12 +9,20 @@
         </title>
     </head>
     <body>
-
+        <br>
+        <br>
         <h1>Gormenghast Markov Poetry</h1>
-        <h4 id='date'></h4>
         <br>
-        <br>
-        <h2 id='poem'></h2>
+        <h2 id='poem1'></h2>
+        <h2 id='poem2'></h2>
+        <h2 id='poem3'></h2>
+        <h2 id='poem4'></h2>
+        <h2 id='poem5'></h2>
+        <h2 id='poem6'></h2>
+        <h2 id='poem7'></h2>
+        <h2 id='poem8'></h2>
+        <h2 id='poem9'></h2>
+        <h2 id='poem10'></h2>
         <img src="castle.jpg" id="bg" alt="">
 
     </body>
